# PRISM-benchmarks

./: .gitignore  .gitmodules  ARCHITECTURE_PLAN.md  Makefile  README.md  bench.env  config.yaml  pyproject.toml
adapters/: base.py  laser.py  mapanything.py  panovggt.py  pi3.py  prism.py  run.py  vggtslam.py
adapters/runners/: _io.py  _stream.py  laser_runner.py  mapanything_runner.py  panovggt_runner.py  pi3_runner.py  prism_runner.py  runner_io.py  vggtslam_runner.py
bench/: cameras.py  config.py  perf.py
dataset/: download.py  export_inputs.py  make_split.py  render_scene.py  trajectories.py
documentation/: mkdocs.yml
documentation/docs/: adapter_contract.md  architecture.md  datasets.md  decisions.md  figures.md  index.md  metrics.md  report.md  results.md  results_bigrun.md  roadmap.md  running.md
documentation/docs/data/bigrun_2026-07/: perf.csv  report_raw.md
envs/: common.sh  setup_laser.sh  setup_mapanything.sh  setup_pi3.sh  setup_prism.sh  setup_vggtslam.sh
eval/: collect_perf.py  eval_recon.py  eval_traj.py  fig_cubemap.py  fig_fusion.py  make_report.py  metric_accuracy.py  snapshots.py  visibility_mask.py  vram_scaling.py
scripts/: add_submodules.sh  run_overnight.sh
tools/: preview.py  studio.py
